--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,4 +1,4 @@
-<h3 class="text-center"> Our Photos</h3>
-<hr>
+<br>
+<h3 class="text-center">|All Photos|</h3>
 <br>
 <%= render partial: "shared/photos", locals: { photos: @photos } %>
