--- a/app/assets/stylesheets/_settings.scss
+++ b/app/assets/stylesheets/_settings.scss
@@ -49,7 +49,7 @@ $global-font-size: 100%;
 $global-width: rem-calc(1200);
 $global-lineheight: 1.5;
 $foundation-palette: (
-  primary: rgba(204, 102, 51, .8),
+  primary: #000000,
   secondary: #777,
   success: rgba(138, 43, 226, .8),
   warning: #ffae00,
