--- a/app/assets/stylesheets/cart.scss
+++ b/app/assets/stylesheets/cart.scss
@@ -21,9 +21,10 @@
   position: absolute;
   color: black;
   font-size: 20px;
-  top: 25%;
+  top: 20%;
   right: 37%;
   z-index: 100;
+  color: #FFFFFF;
 
 }
 
