--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -24,7 +24,7 @@
     <% end %>
     <% if current_user.platform_admin? %>
       <h3>Status: Admin<h3>
-      <%= button_to "Vendors", platform_admin_vendors_path, method: :get %>
+      <%= button_to "All Vendors", platform_admin_vendors_path, method: :get %>
     <% end %>
   </div>
   <div class="small-3"></div>
