--- a/app/views/platform_admin/dashboard/show.html.erb
+++ b/app/views/platform_admin/dashboard/show.html.erb
@@ -4,6 +4,10 @@
     <br>
     <%= link_to "Edit Vendors", platform_admin_vendors_path %>
   </div>
+  <div>
+  <br>
+  <%= link_to "Edit Photos", platform_admin_photos_path %>
+</div>
   <div class="small-6 columns">
     <br>
     <h4 class="centered-text">Welcome to Your Dashboard, <%= current_user.username.capitalize %></h4>
