--- a/app/views/shared/_photos.html.erb
+++ b/app/views/shared/_photos.html.erb
@@ -4,6 +4,7 @@
   <div class="column">
     <div class="flush vendor-photo">
       <%= link_to image_tag(photo.image.url, alt: photo.image.url), photo_path(photo.id) %>
+      <%= link_to photo.title, photo_path(photo.id) %>
       <%= link_to photo.vendor.name, vendor_path(photo.vendor.slug) %>
     </div>
   </div>
