--- a/app/views/platform_admin/photos/edit.html.erb
+++ b/app/views/platform_admin/photos/edit.html.erb
@@ -6,6 +6,7 @@
       <%= f.text_area :description, placeholder: "Photo Description" %>
       <%= f.label :price, "Choose a Price for the New Photo" %>
       <%= f.number_field :price, in: 1000..10000, step: "any" %>
+      <%= f.label :category %>
       <%= f.collection_select :category_ids, Category.all, :id, :name, include_blank: false %>
       <%= f.label :image, "Choose an Image" %>
       <%= f.file_field :image %>
