--- a/app/views/orders/index.html.erb
+++ b/app/views/orders/index.html.erb
@@ -8,9 +8,10 @@
     <thead>
       <tr>
         <th width "150">Order Id</th>
-        <th width "200">Status
-        <th width "150">Total Price</th>
-        <th width "300">Photo</th>
+        <th width "200">Total Cost</th>
+        <th width "150">Total Quantity</th>
+        <th width "300">Photo Names</th>
+        <th width "300">Vendor Names</th>
         <th width "200"></th>
       </tr>
     </thead>
@@ -22,9 +23,9 @@
             <td><%= order.total_quantity%></td>
             <td><%= order.photo_names %></td>
             <td><%= order.photo_vendors %></td>
-            <td><%= link_to "View", order_path(order), class: "button primary" %> </td>
+            <td><%= link_to "View Order", order_path(order), class: "button primary" %></td>
       </tr>
-      <% end %>
+        <% end %>
     </tbody>
   </table>
   <% end %>
