--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -47,8 +47,16 @@ nav {
 
   .login {
     float: right;
+    margin-top: .4%;
+    padding-right: 50px
+
   }
 
+  .nav-cart {
+    margin-top: -.8%;
+    padding-right: 10px;
+    float: right;
+  }
 
 }
 
