--- a/app/views/platform_admin/photos/edit.html.erb
+++ b/app/views/platform_admin/photos/edit.html.erb
@@ -7,7 +7,7 @@
       <%= f.label :price, "Choose a Price for the New Photo" %>
       <%= f.number_field :price, in: 1000..10000, step: "any" %>
       <%= f.label :category %>
-      <%= f.collection_select :category_ids, Category.all, :id, :name, include_blank: false %>
+      <%= f.collection_select :category_ids, @categories, :id, :name, include_blank: false %>
       <%= f.label :image, "Choose an Image" %>
       <%= f.file_field :image %>
       <%= f.hidden_field :vendor_id, value: @photo.vendor.id %>
