--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -1,4 +1,22 @@
-<br>
-<h3 class="text-center">|All Photos|</h3>
+
+<div class="orbit" role="region" aria-label="Recent Uploads" data-orbit>
+  <ul class="orbit-container">
+    <button class="orbit-previous"><span class="show-for-sr">Previous Slide</span>&#9664;&#xFE0E;</button>
+    <button class="orbit-next"><span class="show-for-sr">Next Slide</span>&#9654;&#xFE0E;</button>
+    <% @slide_photos.each do |photo| %>
+    <li class="orbit-slide">
+      <img class="orbit-image" src="<%= photo.image.url%>" alt="Photo">
+      <figcaption class="orbit-caption"><%= truncate photo.title, length: 20%></figcaption>
+    </li>
+    <% end %>
+  </ul>
+</div>
+<hr>
+<div class="row">
+  <div class="small-12 small-centered columns intro">
+    <p class="text"> Welcome to Eccentric Photos! Enjoy our High-Res, Ready to Download Photos </p>
+    <p><i class="fi-camera"></i></p>
+  </div>
+</div>
 <br>
 <%= render partial: "shared/photos", locals: { photos: @photos } %>
