--- a/app/views/shared/_photos.html.erb
+++ b/app/views/shared/_photos.html.erb
@@ -3,7 +3,7 @@
   <% photos.each do |photo| %>
   <div class="small-10 small-centered columns">
     <div class="index-photo">
-      <%= link_to image_tag(photo.image.url, alt: photo.image.url), photo_path(photo.id) %>
+      <%= link_to image_tag(photo.image.url, alt: photo.image.url), photo_path(photo.id), class: "photo" %>
       <div class=" small-12 columns photo-info">
         <%= link_to (truncate photo.vendor.name, length: 20), vendor_path(photo.vendor.slug), class: "vendor button" %>
         <p class="name"><%= truncate photo.title, length: 15 %></p>
