--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,17 +1,37 @@
 <div class="row dashboard">
-  <div class="small-3 columns side-menu full-height">
-    <br>
-    <a href="">Upload a Photo</a>
+  <div class="small-2 columns side-menu full-height">
+    <a href="#" id="">Business Analytics</a>
+    <% current_user.vendors.each do |vendor| %>
+      <a href="#" id="<%= vendor.slug %>"><%= vendor.name %></a>
+    <% end %>
+    <%= link_to "Edit Profile", edit_profile_path, class: "button primary" %>
   </div>
   <div class="small-6 columns">
     <br>
-    <h4 class="centered-text">Welcome to Your Dashboard, <%= current_user.username.capitalize %></h4>
-    <h4 class="centered-text"><%= current_user.email %></h4>
+    <h5 class="centered-text">Welcome to Your Dashboard, <%= current_user.username.capitalize %></h5>
+    <h6 class="centered-text"><%= current_user.email %></h5>
     <% current_user.vendors.each do |vendor| %>
-      <%= link_to vendor.name, vendor_admin_vendor_path(vendor.id), class: "button expanded" %>
+      <div class="vendor-form hidden" id="<%= vendor.slug %>-form">
+        <h3 class="text-center">|<%= vendor.name %>|</h3>
+        <h4 class="text-center">Edit Your Store</h4>
+        <div class="row small-up-1 medium-up-1 large-up-1">
+          <div class="column">
+            <%= form_for vendor, url: vendor_admin_vendor_path(vendor.id) do |f| %>
+              <%= f.label :name %>
+              <%= f.text_field :name %>
+              <%= f.label :about %>
+              <%= f.text_field :about %>
+              <%= f.submit class: "button expanded" %>
+            <% end %>
+            <%= form_for(vendor, url: vendor_admin_vendor_path(vendor.id)) do |f| %>
+              <%= f.hidden_field :status, value: "Inactive" %>
+              <%= f.submit "Take Store Offline", class: "fi-x" %>
+            <% end %>
+          </div>
+        </div>
+      </div>
     <% end %>
   </div>
   <br />
-  <%= link_to "Edit Profile", edit_profile_path, class: "button primary" %>
   <div class="small-3"></div>
 </div>
