--- a/app/assets/stylesheets/vendor.scss
+++ b/app/assets/stylesheets/vendor.scss
@@ -21,7 +21,8 @@
 }
 
 .purchase-button {
-  background-color: rgba(#000000, .1);
+  margin-top: 1%;
+  background-color: #fff;
   color: black;
 }
 
