add login modal and cart quantity

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -58,6 +58,18 @@ nav {
     float: right;
   }
 
+  .quantity {
+    position: absolute;
+    color: black;
+    font-size: 15px;
+    top: 30%;
+    right: 40%;
+    z-index: 100;
+    color: #FFFFFF;
+
+  }
+
+
 }
 
 .button {
