--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -11,7 +11,6 @@
       </div>
   </div>
 
-
   <div class="dropdown">
     <a href="#">Vendors</a>
     <div class="dropdown-content">
@@ -22,57 +21,21 @@
       <% end %>
     </div>
   </div>
-  <%= link_to "", '/cart', class: "fi-shopping-bag nav-cart" %>
+  <a href= "<%= cart_path %>" class="nav-cart">
+    <i class="fi-shopping-bag"><span class="quantity"><%= @cart.quantity %></span></i>
+  </a>
   <% if current_user %>
     <%= link_to "Log Out", logout_path, method: :delete,  class: "login" %>
   <% else %>
-    <%= link_to "Login", login_path, class: "login" %>
+    <p class="login"><a data-open="login">Login</a></p>
   <% end %>
   <hr>
-</nav>
+</nav
 
-
-
-
-
-
-<!-- modal content -->
-
-<div id="myModal" class="reveal-modal" data-reveal aria-labelledby="login or sign up" aria-hidden="true" role="dialog">
-  <div class="row">
-    <div class="large-6 columns auth-plain">
-      <div class="signup-panel left-solid">
-        <p class="welcome">Registered Users</p>
-        <form>
-          <div class="row collapse">
-            <div class="small-2  columns">
-              <span class="prefix"><i class="fi-torso-female"></i></span>
-            </div>
-            <div class="small-10  columns">
-              <input type="text" placeholder="username">
-            </div>
-          </div>
-          <div class="row collapse">
-            <div class="small-2 columns ">
-              <span class="prefix"><i class="fi-lock"></i></span>
-            </div>
-            <div class="small-10 columns ">
-              <input type="text" placeholder="password">
-            </div>
-          </div>
-        </form>
-        <a href="#" class="button ">Log In </a>
-      </div>
-    </div>
-
-    <div class="large-6 columns auth-plain">
-    	<div class="signup-panel newusers">
-    		<p class="welcome"> New User?</p>
-    		<p>By creating an account with us, you will be able to move through the checkout process faster, view and track your orders, and more.</p><br>
-    		<a href="#" class="button ">Sign Up</a></br>
-    	</div>
-    </div>
-
-   </div>
-  <a class="close-reveal-modal" aria-label="Close">&#215;</a>
+<!-- modal -->
+<div class="reveal" id="login" data-reveal data-animation-in="scale-in-up" data-animation-out="scale-out-down">
+  <%= render partial: "layouts/login" %>
+  <button class="close-button" data-close aria-label="Close modal" type="button">
+    <span aria-hidden="true">&times;</span>
+  </button>
 </div>
