fix some failures

--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,6 +1,6 @@
-<div class="form full-log-in">
+<div class="form full-create-account">
 <div class="row login-page">
-  <div class="medium-6 medium-centered large-4 large-centered columns">
+  <div class="medium-6 medium-centered large-6 large-centered columns">
     <%=form_for @user do |f| %>
       <div class="row column log-in-form">
         <h4 class="text-center pad-header">Please Create an Account</h4>
