--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -27,6 +27,7 @@
   <% if current_user %>
     <%= link_to "Log Out", logout_path, method: :delete,  class: "login" %>
   <% else %>
+    <%= link_to "Log In", login_path, method: :delete,  class: "hidden" %>
     <p class="login"><a data-open="login">Login</a></p>
   <% end %>
   <hr>
