--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,11 @@
-Edit Your Account <%= current_user.username.capitalize %>
-<%= form_for current_user do |f| %>
-  <%= f.text_field :username, placeholder: "Username" %>
-  <%= f.text_field :email, placeholder: "Email" %>
-  <%= f.password_field :password, placeholder: "Password" %>
-  <%= f.password_field :password_confirmation, placeholder: "Password confirmation" %>
-  <%= f.submit "Edit Account", class: "button expanded"%>
-<% end %>
+
+<div class="edit-user">  
+  Edit Your Account <%= current_user.username.capitalize %>
+  <%= form_for current_user do |f| %>
+    <%= f.text_field :username, placeholder: "Username" %>
+    <%= f.text_field :email, placeholder: "Email" %>
+    <%= f.password_field :password, placeholder: "Password" %>
+    <%= f.password_field :password_confirmation, placeholder: "Password confirmation" %>
+    <%= f.submit "Edit Account", class: "button expanded"%>
+  <% end %>
+</div>
