Create partials for user dashboard

--- a/app/assets/stylesheets/flash.scss
+++ b/app/assets/stylesheets/flash.scss
@@ -3,8 +3,9 @@ $error: #941B0C;
 $alert:   #BC3908;
 
 @mixin flash-base($animation-name) {
-  position: absolute;
   z-index: 100;
+  margin-top: -40px;
+  padding: 10px;
   width: 100%;
   top: 12%;
   background-color: white;
