--- a/app/assets/stylesheets/log-in.scss
+++ b/app/assets/stylesheets/log-in.scss
@@ -41,7 +41,7 @@ $form-padding: $global-padding;
   textarea:focus, input:focus {
     color: inherit;
     background-color: inherit;
-    border-bottom: solid 3px #aa2200;
+    border-bottom: solid 2px #086788;
   }
 
 
