--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -17,11 +17,18 @@
 }
 
 nav {
+
   padding: 20px;
+
+  .name {
+    font-size: 28px;
+  }
+
   .dropdown {
     position: relative;
     display: inline-block;
-    padding: 3px 0 0 20px;
+    padding: 4px 0 0 20px;
+    text-transform: uppercase;
   }
 
   a:hover {
@@ -35,6 +42,7 @@ nav {
       display: none;
       position: absolute;
       background-color: #f9f9f9;
+      text-transform: uppercase;
       min-width: 160px;
       box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
       padding: 12px 16px;
@@ -48,15 +56,25 @@ nav {
   .login {
     float: right;
     margin-top: .4%;
-    margin-right: 50px
-
+    margin-right: 15px;
+    text-transform: uppercase;;
   }
 
   .nav-cart {
     margin-top: -.8%;
     margin-right: 10px;
+    margin-left: 15px;
     float: right;
   }
+
+  .fi-widget {
+    font-size: 24px;
+    margin-top: 0;
+    margin-right: 10px;
+    margin-left: 10px;
+
+  }
+
 
   .quantity {
     position: absolute;
