--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,13 +1,7 @@
-<br>
-<h3 class="text-center"><%= @category.name %> Photos</h1>
-<br>
-<div class="row small-up-1 medium-up-1 large-up-2">
-  <% @photos.each do |photo| %>
-    <div class="column">
-      <div class="flush text-center">
-        <%= link_to image_tag(photo.image.url), photo_path(photo)  %>
-        <%= link_to photo.vendor.name, vendor_path(photo.vendor.slug)%>
-      </div>
-    </div>
-    <% end  %>
+<div class="row">
+  <div class="small-12 small-centered columns intro">
+    <p class="text category-header"><%= @category.name %> Photos</p>
+    <p><i class="fi-camera"></i></p>
+  </div>
 </div>
+<%= render partial: "shared/photos", locals: { photos: @photos } %>
