add icon to photo show of vendor

--- a/app/assets/stylesheets/image_overlay.scss
+++ b/app/assets/stylesheets/image_overlay.scss
@@ -20,6 +20,12 @@ $global-radius: 4px;
   a {
     color: #fff;
   }
+
+  .vendor-thumbnail {
+    border-radius: 100%;
+    width: 3%;
+    height: auto;
+  }
 }
 
 .overlay-fade-in {
