--- a/app/views/users/_customer_main.html.erb
+++ b/app/views/users/_customer_main.html.erb
@@ -19,19 +19,6 @@
     <%= render partial: "shared/orders_index" %>
   </div>
   <div class="new-business hidden">
-    <h4 class="text-center">Create Your Store</h4>
-    <div class="row small-up-1 medium-up-1 large-up-1">
-      <div class="column">
-        <%= form_for(@vendor) do |f| %>
-          <%= f.label :name %>
-          <%= f.text_field :name %>
-          <%= f.label :about %>
-          <%= f.text_field :about %>
-          <%= f.label :logo %>
-          <%= f.file_field :logo %>
-          <%= f.submit "Create Business", class: "button expanded" %>
-        <% end %>
-      </div>
-    </div>
+    <%= render partial: "shared/new_vendor" %>
   </div>
 </div>
