refactored view to use already pending methods, platform admin items index

--- a/app/assets/stylesheets/platform_admin_dashboard.scss
+++ b/app/assets/stylesheets/platform_admin_dashboard.scss
@@ -1,3 +1,17 @@
+.in-row {
+  float: left;
+  margin-right: 5px;
+}
+
+.third {
+  float: left;
+  width: 30%;
+  padding: 5px;
+}
+
+.clearfix {
+  overflow: auto;
+}
 
 .highlight {
   background-color: black;
