Add test for vendor admin adding an admin

--- a/app/views/users/_vendor_side.html.erb
+++ b/app/views/users/_vendor_side.html.erb
@@ -3,4 +3,5 @@
   <a href="#" class="vendor-button" id="<%= vendor.slug %>"><%= vendor.name %></a>
 <% end %>
 <a href="#" id="edit-profile">Edit Profile</a>
+<a href="#" class="add-admin">Add Admin</a>
 <%= link_to "Create Business", new_vendor_path, method: :get %>
