--- a/app/views/users/_vendor_main.html.erb
+++ b/app/views/users/_vendor_main.html.erb
@@ -45,4 +45,23 @@
       <% end %>
     </div>
   </div>
+  <div class="vendor-admin-form hidden">
+    <h3 class="text-center">|Add an Admin to Your Account|</h3>
+    <br>
+    <div class="small-12 columns">
+      <h4 class="text-center"><br></h4>
+      <%= form_for User.new do |f| %>
+        <%= f.text_field :username, placeholder: "Username" %>
+        <%= f.text_field :email, placeholder: "Email" %>
+        <%= f.password_field :password, placeholder: "Password" %>
+        <%= f.password_field :password_confirmation, placeholder: "Password confirmation" %>
+
+
+        <%= f.collection_select :vendor_ids, current_user.vendors, :id, :name, include_blank: false %>
+
+
+        <%= f.submit "Create Admin", class: "button expanded"%>
+      <% end %>
+    </div>
+  </div>
 </div>
