--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,8 +4,9 @@
       <i class="fi-social-github"></i>
       <p class="links">
         <a href="https://github.com/Jbern16">Jon Bernesser</a>
-        <a href="https://github.com/marinacor1">Marina Corona</a>
-        <a href="https://github.com/jeneve">Jeneve Parish</a>
+        <a href="https://github.com/marinacor1">Sal Espinosa</a>
+        <a href="https://github.com/jeneve">Chad Ellison</a>
+        <a href="https://github.com/jeneve">Christopher Soden</a>
       </p>
     </div>
     <a href="https://www.turing.io/">Turing School</a>
