--- a/app/assets/stylesheets/vendor_dashboard.scss
+++ b/app/assets/stylesheets/vendor_dashboard.scss
@@ -5,3 +5,14 @@
 .button {
   border: 1px solid #000;
 }
+
+.dropzone:hover {
+  opacity: .8;
+  box-shadow: 1px 1px 1px 1px
+}
+
+.reveal {
+  h4 {
+    color: #fff
+  }
+}
