--- a/app/assets/stylesheets/platform_admin_dashboard.scss
+++ b/app/assets/stylesheets/platform_admin_dashboard.scss
@@ -24,10 +24,11 @@ a:hover {
 }
 
 .geo-chart {
-  width: 30%;
+  width: 50%;
   margin: auto;
   margin-top: 30px;
 }
 
 .analytics {
+  margin-bottom: 50px;
 }
