--- a/app/views/users/_vendor_main.html.erb
+++ b/app/views/users/_vendor_main.html.erb
@@ -6,7 +6,7 @@
   <div class="analytics">
     <h3 class="text-center title analytics">Analytics</h3>
     <h4 class="text-center analytics">User Demographic</h4>
-    <div class="geo-chart analytics"><%= geo_chart User.group(:country).count %></div>
+    <div class="geo-chart analytics"><%= geo_chart vendor.users.group(:country).count %></div>
     <div class="pie-chart analytics"><%= pie_chart User.group(:country).count %></div>
     <h4 class="text-center">Photo prices</h4>
     <div class="bar-chart analytics"><%= column_chart Photo.group(:price).count %></div>
