--- a/app/views/users/_vendor_main.html.erb
+++ b/app/views/users/_vendor_main.html.erb
@@ -7,7 +7,7 @@
     <h3 class="text-center title analytics">Analytics</h3>
     <h4 class="text-center analytics">User Demographic</h4>
     <div class="geo-chart analytics"><%= geo_chart vendor.users.group(:country).count %></div>
-    <div class="pie-chart analytics"><%= pie_chart User.group(:country).count %></div>
+    <div class="pie-chart analytics"><%= pie_chart vendor.most_popular_photos.group(:title).count %></div>
     <h4 class="text-center">Photo prices</h4>
     <div class="bar-chart analytics"><%= column_chart Photo.group(:price).count %></div>
   </div>
