clean up tests and order table style

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,32 +1,36 @@
-<br>
 <div class="row">
-<h1 class="text-center">Your Order Id: <%= @order.id  %></h1>
-<table>
-  <thead>
-    <tr>
-      <th width "300"></th>
-      <th width "150">Photo Title</th>
-      <th width "150">Photo Price</th>
-    </tr>
-  </thead>
-  <tbody class="orders">
-    <tr>
-      <% @order.photos.each do |photo| %>
-        <td><%= image_tag photo.image, class: "cart-image" %></td>
-        <td><%= link_to photo.title, photo_path(photo) %></td>
-        <td><%= link_to photo.vendor.name, vendor_path(photo.vendor.slug) %></td>
-        <td><%= number_to_currency photo.price%></td>
-        <td><%= link_to "Download", download_path(photo: photo)%></td>
-    </tr>
-    <% end %>
-  </tbody>
-</table>
-<div class="order-details small-4 small-offset-8 columns">
-  <ul>
-    <h5>Total price for this order: <%= @order.total_cost %></h5>
-      <li><%= @order.format_time(@order.created_at) %></li>
-      <li><%= @order.format_time(@order.updated_at) %></li>
-  </ul>
-</div>
+  <br>
+  <div class="row">
+  <h1 class="text-center">Your Order Id: <%= @order.id  %></h1>
+  <table>
+    <thead>
+      <tr>
+        <th width "300"></th>
+        <th width "150">Photo Title</th>
+        <th width "150">Vendor</th>
+        <th width "150">Photo Price</th>
+        <th width "150"></th>
+      </tr>
+    </thead>
+    <tbody class="orders">
+      <tr>
+        <% @order.photos.each do |photo| %>
+          <td><%= image_tag photo.image, class: "cart-image" %></td>
+          <td><%= link_to photo.title, photo_path(photo) %></td>
+          <td><%= link_to photo.vendor.name, vendor_path(photo.vendor.slug) %></td>
+          <td><%= number_to_currency photo.price%></td>
+          <td><%= link_to "Download", download_path(photo: photo), class: "button success"%></td>
+      </tr>
+      <% end %>
+    </tbody>
+  </table>
+    <div class="order-details small-4 small-offset-8 columns">
+      <ul>
+      <h5>Total price for this order: <%= @order.total_cost %></h5>
+        <li><%= @order.format_time(@order.created_at) %></li>
+        <li><%= @order.format_time(@order.updated_at) %></li>
+      </ul>
+    </div>
+  </div>
 </div>
 <br>
