Update vendor dashboard to fully utilize jQuery to show forms

--- a/app/views/users/_vendor_side.html.erb
+++ b/app/views/users/_vendor_side.html.erb
@@ -4,4 +4,4 @@
 <% end %>
 <a href="#" id="edit-profile">Edit Profile</a>
 <a href="#" class="add-admin">Add Admin</a>
-<%= link_to "Create Business", new_vendor_path, method: :get %>
+<a href="#" class="create-business">Create Business</a>
