--- a/app/views/users/_vendor_main.html.erb
+++ b/app/views/users/_vendor_main.html.erb
@@ -91,4 +91,19 @@
       </div>
     </div>
   </div>
+  <div class="create-business-form hidden">
+    <h3 class="text-center">Create Your Store</h3>
+    <div class="small-12 columns">
+      <h4 class="text-center"><br></h4>
+      <%= form_for(@vendor) do |f| %>
+        <%= f.label :name %>
+        <%= f.text_field :name %>
+        <%= f.label :about %>
+        <%= f.text_field :about %>
+        <%= f.label :logo %>
+        <%= f.file_field :logo %>
+        <%= f.submit "Create Business", class: "button expanded" %>
+      <% end %>
+    </div>
+  </div>
 </div>
