--- a/app/views/platform_admin/dashboard/show.html.erb
+++ b/app/views/platform_admin/dashboard/show.html.erb
@@ -55,7 +55,7 @@
     <div class="analytics">
       <h3 class="text-center title">Analytics</h3>
       <h4 class="text-center">User Demographics</h4>
-      <div class="geo-chart analytics"><%= geo_chart User.group(:country).count %></div>
+      <div class="geo-chart analytics"><%= geo_chart user_demographics %></div>
     </div>
   </div>
   <br>
