remove JS button

--- a/app/views/users/_vendor_side.html.erb
+++ b/app/views/users/_vendor_side.html.erb
@@ -1,6 +1,6 @@
 <a href="#" id="analytics">Business Analytics</a>
 <% current_user.vendors.each do |vendor| %>
-  <a href="javascript:void(0)" class="vendor-button" id="<%= vendor.slug  %>"><%= vendor.name %></a>
+  <a href="#" class="vendor-button" id="<%= vendor.slug  %>"><%= vendor.name %></a>
 <% end %>
 <a href="#" id="edit-profile">Edit Profile</a>
 <a href="#" class="add-admin">Add Admin</a>
